# whitebox_datathon

./: .gitignore  README.md  pyproject.toml  submission3.csv
notebooks/: .~lock.price_high.csv#  pablo.ipynb  price_high.csv  report.ipynb  train_raw.html
whitebox_datathon/: __init__.py  mappings.py  paths.py  pipelines.py  preprocessing.py  preprocessing_2.py  xgboost.py  xgboost__.py  xgboost_optuna.py
