[tool.poetry]
name = "whitebox-datathon"
version = "0.1.0"
description = ""
authors = ["Pabloo22 <pablete.arino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
ydata-profiling = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
